<resources>
    <string name="app_name">Gold Rules</string>

    <!-- opciones -->

    <string name="acerca">Acerca De...</string>
    <string name="cerrar">Cerrar Sesión</string>
    <string name="compartir">Compartir</string>
    <string name="home">Principal</string>
    <string name="configuracion">Preferencias</string>
    <string name="notificaciones">Notificaciones</string>
    <string name="nav_header_subtitle">info@espaciojahiel.com</string>
    <string name="action_settings">Preferencias</string>
    <string name="menu_ingreso">Ingreso Usuario</string>
    <string name="menu_guardar">Guardar</string>
    <string name="menu_pasar_regla">Siguiente Regla</string>
    <string name="menu_anular_bloqueo">Anular Procedimiento</string>
    <string name="title_activity_notifications">Notificaciones</string>
    <string name="vacio">No hay Elementos</string>
    <string name="menu_acerca">Acerca de Gold Rules</string>
    <string name="menu_perfil">Perfil</string>
    <string name="menu_politicas">Políticas de Privacidad</string>
    <string name="menu_terminos">Términos y Condiciones</string>
    <string name="observaciones">Observaciones</string>
    <string name="historial">Historial Procedimientos</string>
    <string name="hora">Hora Inicio</string>
    <string name="fecha">Fecha del Procedimiento</string>
    <string name="tipo_seccion">Tipo de Sección</string>
    <string name="seccion">Sección</string>
    <string name="sistema">Sistema de Reglas</string>
    <string name="ubicacion">Ubicación</string>

    <!-- datos empleados -->

    <string name="clave_cliente">Contraseña</string>
    <string name="olvido_contraseña">¿Olvidaste la contraseña?</string>
    <string name="dialog_usuario">Ud. es un usuario registrado?</string>
    <string name="menu_ingresar">Ingreso Usuario</string>
    <string name="mail_cliente">Dirección de Email</string>
    <string name="registro">REGISTRESE AQUI</string>
    <string name="nombre_usuario">Nombre y Apellido</string>
    <string name="confirmar_cliente">Confirmar Contraseña</string>
    <string name="foto">Foto Perfil</string>
    <string name="menu_registro">Registro Usuario</string>
    <string name="error_invalid_email">Email invalido</string>
    <string name="empresa">Empresa</string>

    <!-- Diálogos -->
    <string name="dialogo_contrasenia">Restablecimiento de contraseña</string>
    <string name="mensaje_contrasenia">Ingrese la dirección de correo electrónico que utilizó para registrarse.
    Le enviaremos un mail con instrucciones para definir una nueva contraseña</string>
    <string name="dialog_aceptar">Aceptar</string>
    <string name="terminado">Proceso Terminado</string>
    <string name="dialog_ok">NO</string>
    <string name="dialog_cancel">SI</string>
    <string name="enviar_mail">Enviando Mail...</string>

    <!-- Beacon -->

    <string name="start_button_text">Comenzar</string>
    <string name="stop_button_text">Parar</string>
    <string name="location_access_needed">Esta aplicación necesita acceso a la localización</string>
    <string name="grant_location_access">Por favor conceda permisos de localización para que la aplicación pueda detectar beacons</string>
    <string name="not_support_bluetooth_msg">Este dispositivo no soporta bluetooth, no es posible buscar beacons</string>
    <string name="cancel_button_text">Cancelar</string>
    <string name="location_disabled">Localización en modo alta precisión no activado</string>
    <string name="location_settings">Abrir ajustes de localización</string>
    <string name="location_not_granted">Ya que el permiso de localización no ha sido concedido,</string>
    <string name="cannot_discover_beacons">esta aplicación no podrá buscar beacons</string>
    <string name="funcionality_limited">Funcionalidad limitada</string>
    <string name="no_bluetooth_msg">Con el bluetooth desactivado no es posible buscar beacons</string>
    <string name="start_looking_for_beacons">Empezando a buscar beacons</string>
    <string name="stop_looking_for_beacons">Parando la búsqueda de beacons</string>
    <string name="no_beacons_detected">No se han encontrado beacons</string>
    <string name="beacon_detected">Beacon %1$s detectada!!</string>

    <!-- Formatters -->
    <string name="formatter_meters">%sm</string>
    <string name="formatter_db">%sdb</string>
    <string name="formatter_item_count">Items: %s</string>

    <!--Toast Messages-->
    <string name="toast_scanning">"Escaneando…"</string>
    <string name="toast_completed">"Escaneado Completo"</string>
    <string name="toast_waiting">"Esperando adaptador Bluetooth…"</string>
    <string name="toast_no_le">"El dispositivo no es compatible con Bluetooth de Bajo Consumo"</string>
    <string name="toast_interrupted">"Escaneo interrumpido"</string>
    <string name="toast_warning_permission_not_granted">Permiso de ubicación aproximada no otorgado</string>

    <!-- Preferences -->
    <string name="menu_settings">Configuraciones</string>
    <string name="scan_time">Tiempo de escaneo (milisegundos)</string>
    <string name="scan_time_summary">Set Scan Time Duration</string>
    <string name="pause_time">Pause Time (milliseconds)</string>
    <string name="pause_time_summary">Set Time Between Scans</string>
    <string name="scan_settings">Service Settings</string>
    <string name="pref_scantime">scanTime</string>
    <string name="pref_pausetime">pauseTime</string>
    <string name="title_activity_scan_preferences">Scan Preferences</string>

    <!-- MergeAdapter Labels -->
    <string name="label_last_timestamp">Last Timestamp:</string>
    <string name="label_last_rssi">Last RSSI:</string>
    <string name="label_company_id">Company ID:</string>
    <string name="label_uuid">UUID:</string>
    <string name="label_major">Major:</string>
    <string name="label_minor">Minor:</string>
    <string name="labe_tx_power">TX Power:</string>
    <string name="label_device_name">Device Name:</string>
    <string name="label_device_address">Device Address:</string>

</resources>
