<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/background"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="0px"
        android:layout_height="0px"
        android:focusable="true"
        android:focusableInTouchMode="true">
        <requestFocus/>

    </LinearLayout>

    <!-- Indicador de progreso -->
    <RelativeLayout
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <android.support.design.widget.TextInputLayout
            android:id="@+id/login_usuario_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView6"
            android:textColorHint="@color/colorSecondaryText"
            app:passwordToggleTint="@color/colorPrimaryDark">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editTextUsuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/textView6"
                android:layout_marginTop="15dp"
                android:ems="10"
                android:hint="@string/mail_cliente"
                android:inputType="textEmailAddress"
                android:textColor="@color/colorSecondaryText"
                android:textColorHint="@color/colorSecondaryText"
                tools:focusable="false"
                tools:ignore="RtlHardcoded" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/buttonIngreso"
            android:layout_width="@dimen/campos_width_medio"
            android:layout_height="wrap_content"

            android:layout_below="@+id/login_password_container"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="14dp"
            android:background="@color/colorPrimary"
            android:text="@string/menu_ingresar"
            android:textColor="@color/colorPrimaryText"
            tools:ignore="RtlHardcoded" />



        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:text="@string/dialog_usuario"
            android:textColor="@color/colorSecondaryText"
            tools:ignore="RtlHardcoded" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/login_password_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/login_usuario_container"
            android:textColorHint="@color/colorSecondaryText"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorPrimary"
            app:passwordToggleTintMode="src_in">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editTextClave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:ems="10"
                android:hint="@string/clave_cliente"

                android:inputType="textPassword"
                android:textColor="@color/colorSecondaryText"
                android:textColorHint="@color/colorRippleMini"
                tools:ignore="RtlHardcoded" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/olvidaste"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/buttonRegistro"
            android:layout_centerVertical="true"
            android:layout_marginTop="10dp"
            android:text="@string/olvido_contraseña"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp" />

        <Button
            android:id="@+id/buttonRegistro"
            android:layout_width="@dimen/campos_width_medio"
            android:layout_height="wrap_content"

            android:layout_below="@+id/buttonIngreso"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="11dp"
            android:background="@color/colorPrimary"
            android:text="@string/registro"
            android:textColor="@color/colorPrimaryText" />






    </RelativeLayout>

    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

</LinearLayout>