<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_gravity="center_horizontal"
    android:paddingStart="@dimen/padding_large"
    android:paddingEnd="@dimen/padding_large"
    xmlns:card_view="http://schemas.android.com/tools"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:layout_width="@dimen/perfil_image_grande"
            android:layout_height="@dimen/perfil_image_grande"
            android:layout_margin="2dp"
            card_view:cardBackgroundColor="@color/color_lista"
            app:cardElevation = "10dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:id="@+id/cardSeccion"
            card_view:cardUseCompatPadding="false"
            app:cardCornerRadius="10dp">

            <ImageView
                android:id="@+id/imageViewSeccion"
                android:layout_width="@dimen/perfil_image_grande"
                android:layout_height="@dimen/perfil_image_grande"
                android:scaleType="centerCrop"
                android:src="@drawable/maquina_grande" />


        </androidx.cardview.widget.CardView>


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewTitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="TextView"
            android:textColor="@color/colorPrimaryDark"
            android:layout_centerHorizontal="true"
            android:textAlignment="center"
            android:textSize="@dimen/tamanio_titulo"
            android:textStyle="bold" />

    </RelativeLayout>

    <TextView
        android:id="@+id/textViewnomEmpresa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top"
        android:gravity="center"
        android:text="@string/empresa"
        android:textColor="@color/colorPrimaryDark"
        android:textAlignment="center"
        android:textSize="@dimen/tamanio_item"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/textViewEmpresa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_item"
        android:gravity="center"
        android:text="TextView"
        android:textAlignment="center"
        android:textSize="@dimen/tamanio_item" />

    <TextView
        android:id="@+id/textViewnomUbicacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top"
        android:gravity="center"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/ubicacion"
        android:textAlignment="center"
        android:textSize="@dimen/tamanio_item"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/textViewUbicacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_item"
        android:gravity="center"
        android:text="TextView"
        android:textAlignment="center"
        android:textSize="@dimen/tamanio_item" />

    <TextView
        android:id="@+id/textViewnomSistema"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top"
        android:gravity="center"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/sistema"
        android:textAlignment="center"
        android:textSize="@dimen/tamanio_item"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/textViewSistemas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_item"
        android:gravity="center"
        android:text="TextView"
        android:textAlignment="center"
        android:textSize="@dimen/tamanio_item" />

    <TextView
        android:id="@+id/textViewnomTipo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top"
        android:gravity="center"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/tipo_seccion"
        android:textAlignment="center"
        android:textSize="@dimen/tamanio_item"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/textViewTipos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_item"
        android:gravity="center"
        android:text="TextView"
        android:textAlignment="center"
        android:textSize="@dimen/tamanio_item" />



</LinearLayout>