<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_gravity="center_horizontal"
    android:paddingStart="@dimen/padding_large"
    android:paddingEnd="@dimen/padding_large"
    xmlns:card_view="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/back_regla"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="vertical">


                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_top"
                    android:src="@drawable/seccion" />


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_top"
                    android:orientation="horizontal">



                    <TextView
                        android:id="@+id/textViewTitulo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:text="TextView"
                        android:textColor="@color/colorPrimary"

                        android:textAlignment="textStart"
                        android:textSize="@dimen/tamanio_titulo"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/imageViewCompleto"
                        android:layout_width="@dimen/estrella"
                        android:layout_height="@dimen/estrella"
                        android:layout_alignTop="@id/textViewTitulo"
                        android:layout_alignParentEnd="true"

                        android:layout_marginEnd="@dimen/item_vertical_margin"
                        android:src="@drawable/completo" />
                </RelativeLayout>
            </LinearLayout>



            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:id="@+id/fechas"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewnomFecha"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/fecha"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/tamanio_item"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textViewFecha"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_top_item"
                    android:layout_marginStart="@dimen/margin_start"
                    android:text="TextView"
                    android:layout_below="@id/textViewnomFecha"
                    android:textAlignment="center"
                    android:textSize="@dimen/tamanio_item" />

                <TextView
                    android:id="@+id/textViewnomHora"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_top"
                    android:layout_below="@id/textViewFecha"
                    android:textColor="@color/colorPrimary"
                    android:text="@string/hora"
                    android:textAlignment="center"
                    android:textSize="@dimen/tamanio_item"
                    android:textStyle="bold"/>


                <TextView
                    android:id="@+id/textViewTiempo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_start"
                    android:text="TextView"
                    android:layout_marginTop="@dimen/margin_top_item"
                    android:layout_marginBottom="10dp"
                    android:layout_below="@id/textViewnomHora"
                    android:textAlignment="center"
                    android:textSize="@dimen/tamanio_item" />
            </RelativeLayout>


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                card_view:cardBackgroundColor="@color/back_regla"
                app:cardElevation = "10dp"

                card_view:cardUseCompatPadding="false"
                app:cardCornerRadius="5dp">


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:id="@+id/seccion"
                        android:layout_marginTop="5dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/imageViewMaquina"
                            android:layout_width="@dimen/campos_height"
                            android:layout_height="@dimen/campos_height"
                            android:layout_alignParentStart="true"
                            android:layout_centerVertical="true"
                            android:layout_marginStart="@dimen/margin_start"
                            android:src="@drawable/boton_maquina" />

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/nom_maquina"
                            android:layout_marginTop="@dimen/margin_top_item"
                            android:layout_toEndOf="@id/imageViewMaquina"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/textViewnomMaquina"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="@dimen/margin_top_item"
                                android:textColor="@color/colorPrimary"
                                android:text="@string/seccion"
                                android:textAlignment="center"
                                android:textSize="@dimen/tamanio_item"
                                android:textStyle="bold"/>

                            <TextView
                                android:id="@+id/textViewMaquina"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerVertical="true"
                                android:layout_marginStart="@dimen/margin_top_item"
                                android:layout_below="@id/textViewnomMaquina"
                                android:textSize="@dimen/tamanio_item"

                                android:text="TextView"
                                android:textAlignment="center"
                                />
                        </RelativeLayout>
                        <View
                            android:id="@+id/view2"
                            android:layout_width="fill_parent"
                            android:layout_height="0.5dp"
                            android:layout_marginTop="15dp"
                            android:background="@android:color/darker_gray"
                            android:visibility="visible"
                            android:layout_below="@+id/imageViewMaquina"/>



                    </RelativeLayout>



                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/seccion"
                        android:id="@+id/reglas"
                        android:layout_marginTop="5dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/imageViewReglas"
                            android:layout_width="@dimen/campos_height"
                            android:layout_height="@dimen/campos_height"
                            android:layout_alignParentStart="true"
                            android:layout_marginTop="5dp"
                            android:layout_centerVertical="true"
                            android:layout_marginStart="@dimen/margin_start"
                            android:src="@drawable/boton_reglas" />



                        <TextView
                            android:id="@+id/textViewReglas"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginStart="@dimen/margin_start"
                            android:layout_toEndOf="@id/imageViewReglas"
                            android:textSize="@dimen/tamanio_item"
                            android:textStyle="bold"
                            android:textColor="@color/colorPrimaryDark"
                            android:text="Ver Reglas"
                            android:textAlignment="center"/>



                    </RelativeLayout>
                </RelativeLayout>
            </androidx.cardview.widget.CardView>


        </LinearLayout>
    </ScrollView>
</LinearLayout>